--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <div class="main">
     <div class="navhead">
-      <div class="arrow"><a href="./otp.html"><img src="./images/auth/arrow.png"/></a></div>
+      <div class="arrow"><a href="./home.html"><img src="./images/auth/arrow.png"/></a></div>
       <div class="heading"> The Smart Anaaj </div>
     </div>
     <div class="head1">Hand-picked from farmers</div>
