--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <!--Search-->
     <div class="searchbar">
       <div class="icon"><img src="./images/delivery/search.png"/></div>
-      <div class="stext">Search for your grains. eg. wheat, bajra.</div>
+      <input type="text" class="stext" placeholder="Search for your grains. eg. wheat, bajra." />
     </div>
 
     <!--Delivery-->
@@ -31,11 +31,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <div class="anaaj1"><img src="./images/walkthrough/pic2.png" class="animg1" /></div>
-      <div class="anaaj2"><img src="./images/home/anaaj2.png" class="animg2" /></div>
-      <div class="anaaj3"><img src="./images/home/anaaj3.png" class="animg3" /></div>
-      <div class="anaaj4"><img src="./images/home/anaaj4.png" class="animg4" /></div>
-      <div class="anaaj5"><img src="./images/home/anaaj5.png" class="animg5" /></div>
+      <button class="anaaj1"><img src="./images/walkthrough/pic2.png" class="animg1" /></button>
+      <button class="anaaj2"><img src="./images/home/anaaj2.png" class="animg2" /></button>
+      <button class="anaaj3"><img src="./images/home/anaaj3.png" class="animg3" /></button>
+      <button class="anaaj4"><img src="./images/home/anaaj4.png" class="animg4" /></button>
+      <button class="anaaj5"><img src="./images/home/anaaj5.png" class="animg5" /></but>
     </div>
     <div class="atexts">
       <span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span>
@@ -47,7 +47,7 @@
 
     <!--Main Body-->
     <div class="headie">Freshly prepared Atta delivered within 24 hrs.</div>
-    <div class="but"><a href="./main/category.html" id="a1"><div class="text">Add Your Anaaj</div></a></div>
+    <button class="but"><a href="./main/category.html" id="a1"><span class="text">Add Your Anaaj</a></button>
     <div class="imgi"><img src="./images/home/more.png" /></div>
 
     <!--Popular-->
@@ -56,23 +56,23 @@
     <div class="box">
       <div class="inhead">MP Sharbati <br/> Diamond</div>
       <div class="inbody">Weight 1 kg</div>
-      <div class="inimg"><img src="./images/home/circle.png" class="circle"/><img src="./images/home/add.png" class="plus"/></div>
+      <button class="inimg"><img src="./images/home/circle.png" class="circle"/><img src="./images/home/add.png" class="plus"/></button>
     </div>
     </div>
 
     <!--Category-->
     <div class="headie3">Explore by Category</div>
-    <div class="cate1"><img src="./images/home/grain1.png" /></div>
-    <div class="cate2"><img src="./images/home/grain2.png" /></div>
-    <div class="cate3"><img src="./images/home/grain3.png" /></div>
-    <div class="cate4"><img src="./images/home/grain4.png" /></div>
-    <div class="cate5"><img src="./images/home/grain5.png" /></div>
+    <button class="cate1"><img src="./images/home/grain1.png" /></button>
+    <button class="cate2"><img src="./images/home/grain2.png" /></button>
+    <button class="cate3"><img src="./images/home/grain3.png" /></button>
+    <button class="cate4"><img src="./images/home/grain4.png" /></button>
+    <button class="cate5"><img src="./images/home/grain5.png" /></button>
 
     <!--Know More-->
-    <div class="mbut1">
-      <span class="tbut1"><a href="../about.html" id="a1">Know more about Smart Anaaj</a></span>
+    <button class="mbut1">
+      <span class="tbut1"><a href="./about.html" id="a1">Know more about Smart Anaaj</a></span>
       <div class="know1"><img src="./images/delivery/right.png" /></div>
-    </div>
+    </button>
 
     <!--Features-->
     <div class="headie4">The flour that you get from Smart Anaaj are:</div>
@@ -86,9 +86,9 @@
     <!--Grains-->
     <div class="headie5">Know your grain</div>
     <div class="grains">
-      <div class="grain1"><img src="./images/home/wheat.png" class="gimg1"/><div class="gtext1">Wheat</div><img src="./images/home/carrow.png" class="garrow1"/></div>
-      <div class="grain2"><img src="./images/home/wheat.png" class="gimg2"/><div class="gtext2">Oats</div><img src="./images/home/more.png" class="garrow2"/></div>
-      <div class="grain3"><img src="./images/home/wheat.png" class="gimg3"/><div class="gtext3">Soyabeen</div><img src="./images/home/more.png" class="garrow3"/></div>
+      <button class="grain1"><img src="./images/home/wheat.png" class="gimg1"/><div class="gtext1">Wheat</div><img src="./images/home/carrow.png" class="garrow1"/></button>
+      <button class="grain2"><img src="./images/home/wheat.png" class="gimg2"/><div class="gtext2">Oats</div><img src="./images/home/more.png" class="garrow2"/></button>
+      <button class="grain3"><img src="./images/home/wheat.png" class="gimg3"/><div class="gtext3">Soyabeen</div><img src="./images/home/more.png" class="garrow3"/></button>
     </div>
 
     <!--Blogs-->
