--- a/main/address.html
+++ b/main/address.html
@@ -20,6 +20,7 @@
       <div class="add">Use my current location</div>
       <div class="results">Search Results</div>
       <input type="text" class="hr1"></input>
+      <button class="save" onclick="finalcart.html"><a href="finalcart.html"><span class="butext">Save and Proceed</span></a></button>
   </div>
 </body>
 </html>
