--- a/auth/content.html
+++ b/auth/content.html
@@ -8,12 +8,29 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="main">
+  <div>
     <div class="navhead">
       <div class="arrow"><a href="./signup.html"><img src="../images/auth/arrow.png"/></a></div>
       <div class="heading"> Content Policy </div>
     </div>
-  </div>
-</div>
+    <div class="content">
+        All logos, brands, marks headings, labels, names, signatures, numerals, blogs, shapes or any combinations thereof,
+        appearing in this site, except as otherwise noted, are properties either owned, or used under licence, by the
+        business and / or its associate entities who feature on this Website. The use of these properties or any other
+        content on this site, except as provided in these terms and conditions or in the site content, is strictly prohibited.
+    </div>
+    <div class="content1">
+          You may not sell or modify the content of this Website  or reproduce, display, publicly perform, distribute, or
+          otherwise use the materials in any way for any public or commercial purpose without the respective organisation’s
+          or entity’s written permission.
+    </div>
+    <div class="content2">
+          In no event shall Company or any parties, organizations or entities associated with
+          the corporate brand name us or otherwise, mentioned at this Website be liable for any damages whatsoever (including,
+          without limitations, incidental and consequential damages, lost profits, or damage to computer hardware or loss of
+          data information or business interruption) resulting from the use or inability to use the Website and the Website
+          material, whether based on warranty, contract, tort, or any other legal theory, and whether or not, such organization
+          or entities were advised of the possibility of such damages.
+    </div>
 </body>
 </html>
