--- a/auth/signup.html
+++ b/auth/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="main">
-    <div class="arrow"><a href=".././main.html"><img src="../images/auth/arrow.png"/></a></div>
+    <div class="arrow"><a href="../main.html"><img src="../images/auth/arrow.png"/></a></div>
     <span class="phone">Phone Number</span>
     <div>
       <div class="nicon">+91</div>
