--- a/home.html
+++ b/home.html
@@ -62,11 +62,11 @@
 
     <!--Category-->
     <div class="headie3">Explore by Category</div>
-    <button class="cate1"><img src="./images/home/grain1.png" /></button>
-    <button class="cate2"><img src="./images/home/grain2.png" /></button>
-    <button class="cate3"><img src="./images/home/grain3.png" /></button>
-    <button class="cate4"><img src="./images/home/grain4.png" /></button>
-    <button class="cate5"><img src="./images/home/grain5.png" /></button>
+    <button class="cate1"><a href=""><img src="./images/home/grain1.png" /></a></button>
+    <button class="cate2"><a href=""><img src="./images/home/grain2.png" /></a></button>
+    <button class="cate3"><a href=""><img src="./images/home/grain3.png" /></a></button>
+    <button class="cate4"><a href=""><img src="./images/home/grain4.png" /></a></button>
+    <button class="cate5"><a href=""><img src="./images/home/grain5.png" /></a></button>
 
     <!--Know More-->
     <button class="mbut1">
