--- a/home.html
+++ b/home.html
@@ -31,11 +31,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <button class="anaaj1"><img src="./images/walkthrough/pic2.png" class="animg1" /></button>
-      <button class="anaaj2"><img src="./images/home/anaaj2.png" class="animg2" /></button>
-      <button class="anaaj3"><img src="./images/home/anaaj3.png" class="animg3" /></button>
-      <button class="anaaj4"><img src="./images/home/anaaj4.png" class="animg4" /></button>
-      <button class="anaaj5"><img src="./images/home/anaaj5.png" class="animg5" /></but>
+      <button class="anaaj1"><a href=""><img src="./images/walkthrough/pic2.png" class="animg1" /></a></button>
+      <button class="anaaj2"><a href=""><img src="./images/home/anaaj2.png" class="animg2" /></a></button>
+      <button class="anaaj3"><a href=""><img src="./images/home/anaaj3.png" class="animg3" /></a></button>
+      <button class="anaaj4"><a href=""><img src="./images/home/anaaj4.png" class="animg4" /></a></button>
+      <button class="anaaj5"><a href=""><img src="./images/home/anaaj5.png" class="animg5" /></a></but>
     </div>
     <div class="atexts">
       <span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span>
@@ -86,9 +86,9 @@
     <!--Grains-->
     <div class="headie5">Know your grain</div>
     <div class="grains">
-      <button class="grain1"><img src="./images/home/wheat.png" class="gimg1"/><div class="gtext1">Wheat</div><img src="./images/home/carrow.png" class="garrow1"/></button>
-      <button class="grain2"><img src="./images/home/wheat.png" class="gimg2"/><div class="gtext2">Oats</div><img src="./images/home/more.png" class="garrow2"/></button>
-      <button class="grain3"><img src="./images/home/wheat.png" class="gimg3"/><div class="gtext3">Soyabeen</div><img src="./images/home/more.png" class="garrow3"/></button>
+      <button class="grain1"><a href=""><img src="./images/home/wheat.png" class="gimg1"/></a><div class="gtext1">Wheat</div><img src="./images/home/carrow.png" class="garrow1"/></button>
+      <button class="grain2"><a href=""><img src="./images/home/wheat.png" class="gimg2"/></a><div class="gtext2">Oats</div><img src="./images/home/more.png" class="garrow2"/></button>
+      <button class="grain3"><a href=""><img src="./images/home/wheat.png" class="gimg3"/></a><div class="gtext3">Soyabeen</div><img src="./images/home/more.png" class="garrow3"/></button>
     </div>
 
     <!--Blogs-->
