--- a/main/category.html
+++ b/main/category.html
@@ -26,11 +26,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <div class="anaaj1"><img src="../images/walkthrough/pic2.png" class="animg1" /></div>
-      <div class="anaaj2"><img src="../images/home/anaaj2.png" class="animg2" /></div>
-      <div class="anaaj3"><img src="../images/home/anaaj3.png" class="animg3" /></div>
-      <div class="anaaj4"><img src="../images/home/anaaj4.png" class="animg4" /></div>
-      <div class="anaaj5"><img src="../images/home/anaaj5.png" class="animg5" /></div>
+      <button class="anaaj1"><a href=""><img src="../images/walkthrough/pic2.png" class="animg1" /></a></button>
+      <button class="anaaj2"><a href=""><img src="../images/home/anaaj2.png" class="animg2" /></a></button>
+      <button class="anaaj3"><a href=""><img src="../images/home/anaaj3.png" class="animg3" /></a></button>
+      <button class="anaaj4"><a href=""><img src="../images/home/anaaj4.png" class="animg4" /></a></button>
+      <button class="anaaj5"><a href=""><img src="../images/home/anaaj5.png" class="animg5" /></a></button>
     </div>
     <div class="atexts">
       <a href="customise.html" id="a1"><span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span></a>
@@ -42,11 +42,11 @@
 
     <!--Category-->
     <div class="headie3">Choose by Category</div>
-    <div class="cate1"><img src="../images/home/grain1.png" /></div>
-    <div class="cate2"><img src="../images/home/grain2.png" /></div>
-    <div class="cate3"><img src="../images/home/grain3.png" /></div>
-    <div class="cate4"><img src="../images/home/grain4.png" /></div>
-    <div class="cate5"><img src="../images/home/grain5.png" /></div>
+    <button class="cate1"><a href=""><img src="../images/home/grain1.png" /></a></button>
+    <button class="cate2"><a href=""><img src="../images/home/grain2.png" /></a></button>
+    <button class="cate3"><a href=""><img src="../images/home/grain3.png" /></a></button>
+    <button class="cate4"><a href=""><img src="../images/home/grain4.png" /></a></button>
+    <button class="cate5"><a href=""><img src="../images/home/grain5.png" /></a></button>
   </div>
 </body>
 </html>
