--- a/main/grain.html
+++ b/main/grain.html
@@ -9,9 +9,7 @@
   <title>Home</title>
 </head>
 <body>
-
   <div class="main">
-
     <!--Header-->
     <div class="navhead">
       <div class="navi"><a href="../menu.html"><img src="../images/home/navbar.png"/></a></div>
@@ -28,11 +26,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <div class="anaaj1"><img src="../images/walkthrough/pic2.png" class="animg1" /></div>
-      <div class="anaaj2"><img src="../images/home/anaaj2.png" class="animg2" /></div>
-      <div class="anaaj3"><img src="../images/home/anaaj3.png" class="animg3" /></div>
-      <div class="anaaj4"><img src="../images/home/anaaj4.png" class="animg4" /></div>
-      <div class="anaaj5"><img src="../images/home/anaaj5.png" class="animg5" /></div>
+      <button class="anaaj1"><a href=""><img src="../images/walkthrough/pic2.png" class="animg1" /></a></button>
+      <button class="anaaj2"><a href=""><img src="../images/home/anaaj2.png" class="animg2" /></a></button>
+      <button class="anaaj3"><a href=""><img src="../images/home/anaaj3.png" class="animg3" /></a></button>
+      <button class="anaaj4"><a href=""><img src="../images/home/anaaj4.png" class="animg4" /></a></button>
+      <button class="anaaj5"><a href=""><img src="../images/home/anaaj5.png" class="animg5" /></a></button>
     </div>
     <div class="atexts">
       <span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span>
@@ -44,23 +42,23 @@
 
     <!--Wheats-->
     <div class="headie">Choose your wheat</div><div class="info"><img src="../images/main/info.png"/></div>
-    <div class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></div>
-    <div class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></div>
-    <div class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></div>
+    <button class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></button>
+    <button class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></button>
+    <button class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></button>
 
     <div class="headie2">Choose grains for customisation</div><div class="info2"><img src="../images/main/info.png"/></div>
-    <div class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Millet (Bajra)</span></div>
-    <div class="g2"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Barley (Jau)</span></div>
-    <div class="g3"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Soybean</span></div>
-    <div class="g4"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Corn (Makka)</span></div>
-    <div class="g5"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Chickpeas (Channa)</span></div>
-    <div class="g6"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Arrowroot (Araru/Paniphal)</span></div>
-    <div class="g7"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Quinoa (Bathua)</span></div>
-    <div class="g8"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Bulgar Wheat (Lapsi)</span></div>
-    <div class="g9"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Oats (Jayi)</span></div>
-    <div class="g10"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Rye</span></div>
-    <div class="g11"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Sorghum (Jowar)</span></div>
-    <div class="g12"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Rice</span></div>
+    <button class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext1">Millet (Bajra)</span></button>
+    <button class="g2"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Barley (Jau)</span></button>
+    <button class="g3"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext2">Soybean</span></button>
+    <button class="g4"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Corn (Makka)</span></button>
+    <button class="g5"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext3">Chickpeas (Channa)</span></button>
+    <button class="g6"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Arrowroot (Araru/Paniphal)</span></button>
+    <button class="g7"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Quinoa (Bathua)</span></button>
+    <button class="g8"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Bulgar Wheat (Lapsi)</span></button>
+    <button class="g9"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext2">Oats (Jayi)</span></button>
+    <button class="g10"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext4">Rye</span></button>
+    <button class="g11"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Sorghum (Jowar)</span></button>
+    <button class="g12"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext4">Rice</span></button>
 
     <div class="blockie">
       <div class="col1">Total Flour Qty.</div>
