--- a/main/grind.html
+++ b/main/grind.html
@@ -28,11 +28,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <div class="anaaj1"><img src="../images/walkthrough/pic2.png" class="animg1" /></div>
-      <div class="anaaj2"><img src="../images/home/anaaj2.png" class="animg2" /></div>
-      <div class="anaaj3"><img src="../images/home/anaaj3.png" class="animg3" /></div>
-      <div class="anaaj4"><img src="../images/home/anaaj4.png" class="animg4" /></div>
-      <div class="anaaj5"><img src="../images/home/anaaj5.png" class="animg5" /></div>
+      <button class="anaaj1"><a href=""><img src="../images/walkthrough/pic2.png" class="animg1" /></a></button>
+      <button class="anaaj2"><a href=""><img src="../images/home/anaaj2.png" class="animg2" /></a></button>
+      <button class="anaaj3"><a href=""><img src="../images/home/anaaj3.png" class="animg3" /></a></button>
+      <button class="anaaj4"><a href=""><img src="../images/home/anaaj4.png" class="animg4" /></a></button>
+      <button class="anaaj5"><a href=""><img src="../images/home/anaaj5.png" class="animg5" /></a></button>
     </div>
     <div class="atexts">
       <span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span>
