--- a/main/wheat.html
+++ b/main/wheat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+wq<!DOCTYPE html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,11 +27,11 @@
 
     <!--Anaajs-->
     <div class="anaajs">
-      <div class="anaaj1"><img src="../images/walkthrough/pic2.png" class="animg1" /></div>
-      <div class="anaaj2"><img src="../images/home/anaaj2.png" class="animg2" /></div>
-      <div class="anaaj3"><img src="../images/home/anaaj3.png" class="animg3" /></div>
-      <div class="anaaj4"><img src="../images/home/anaaj4.png" class="animg4" /></div>
-      <div class="anaaj5"><img src="../images/home/anaaj5.png" class="animg5" /></div>
+      <button class="anaaj1"><a href=""><img src="../images/walkthrough/pic2.png" class="animg1" /></a></button>
+      <button class="anaaj2"><a href=""><img src="../images/home/anaaj2.png" class="animg2" /></a></button>
+      <button class="anaaj3"><a href=""><img src="../images/home/anaaj3.png" class="animg3" /></a></button>
+      <button class="anaaj4"><a href=""><img src="../images/home/anaaj4.png" class="animg4" /></a></button>
+      <button class="anaaj5"><a href=""><img src="../images/home/anaaj5.png" class="animg5" /></a></button>
     </div>
     <div class="atexts">
       <span class="a1text">Customised <br /> &nbsp &nbsp &nbsp Flour</span>
@@ -43,11 +43,11 @@
 
     <!--Wheats-->
     <div class="headie">Choose your wheat</div><div class="info"><img src="../images/main/info.png"/></div>
-    <div class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/wheat.png" class="wimg1" /></div>
-    <div class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></div>
-    <div class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></div>
+    <button class="wheat1"><a href=""><div class="wtext1">Platinum </div><img src="../images/main/wheat.png" class="wimg1" /></a></button>
+    <button class="wheat2"><a href=""><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></a></button>
+    <button class="wheat3"><a href=""><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></a></button>
 
-    <div class="but"><a href="grain.html" id="a1"><div class="btext">Proceed without wheat</div></a></div>
+    <button class="but"><a href="grain.html" id="a1"><div class="btext">Proceed without wheat</div></a></button>
 
   </div>
 </body>
