--- a/main/grain.html
+++ b/main/grain.html
@@ -42,12 +42,12 @@
 
     <!--Wheats-->
     <div class="headie">Choose your wheat</div><div class="info"><img src="../images/main/info.png"/></div>
-    <button class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></button>
-    <button class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></button>
-    <button class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></button>
+    <button class="wheat1"><a href=""><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></a></button>
+    <button class="wheat2"><a href=""><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></a></button>
+    <button class="wheat3"><a href=""><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></a></button>
 
     <div class="headie2">Choose grains for customisation</div><div class="info2"><img src="../images/main/info.png"/></div>
-    <button class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext1">Millet (Bajra)</span></button>
+    <button class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Millet (Bajra)</span></button>
     <button class="g2"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Barley (Jau)</span></button>
     <button class="g3"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext2">Soybean</span></button>
     <button class="g4"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Corn (Makka)</span></button>
@@ -66,11 +66,11 @@
       <div class="col3">Total Amt.</div>
       <div class="flouratta">
         <div class="opt">Customised <br />Atta</div>
-        <div class="range1">02 </div>
+        <button class="range1">02 </button>
         <span class="divi1" ></span>
-        <div class="range2">05 </div><span class="kg">Kg</span>
+        <button class="range2">05 </button><span class="kg">Kg</span>
         <span class="divi2"></span>
-        <div class="range3">10 </div>
+        <button class="range3">10 </button>
         <div class="prop"> - </div>
         <div class="amt">9999</div>
       </div>
@@ -80,11 +80,11 @@
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
         <div class="prop"> 100% </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
     </div>
 
-    <div class="but1"><a href="grind.html" id="a1"><div class="b1text">Add To Cart</div></a></div>
+    <button class="but1"><a href="grind.html" id="a1"><div class="b1text">Add To Cart</div></a></button>
 
   </div>
 </body>
