--- a/main/grind.html
+++ b/main/grind.html
@@ -44,35 +44,34 @@
 
     <!--Wheats-->
     <div class="headie">Choose your wheat</div><div class="info"><img src="../images/main/info.png"/></div>
-    <div class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></div>
-    <div class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></div>
-    <div class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></div>
+    <button class="wheat1"><div class="wtext1">Platinum </div><img src="../images/main/bwheat.png" class="wimg1" /></button>
+    <button class="wheat2"><div class="wtext2">Gold </div><img src="../images/main/wheat.png" class="wimg2" /></button>
+    <button class="wheat3"><div class="wtext3">Silver </div><img src="../images/main/wheat.png" class="wimg3" /></button>
 
     <div class="headie2">Choose grains for customisation</div><div class="info2"><img src="../images/main/info.png"/></div>
-    <div class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Millet (Bajra)</span></div>
-    <div class="g2"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Barley (Jau)</span></div>
-    <div class="g3"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Soybean</span></div>
-    <div class="g4"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Corn (Makka)</span></div>
-    <div class="g5"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Chickpeas (Channa)</span></div>
-    <div class="g6"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Arrowroot (Araru/Paniphal)</span></div>
-    <div class="g7"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Quinoa (Bathua)</span></div>
-    <div class="g8"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Bulgar Wheat (Lapsi)</span></div>
-    <div class="g9"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext">Oats (Jayi)</span></div>
-    <div class="g10"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Rye</span></div>
-    <div class="g11"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Sorghum (Jowar)</span></div>
-    <div class="g12"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Rice</span></div>
-
+    <button class="g1"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext1">Millet (Bajra)</span></button>
+    <button class="g2"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Barley (Jau)</span></button>
+    <button class="g3"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext2">Soybean</span></button>
+    <button class="g4"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext1">Corn (Makka)</span></button>
+    <button class="g5"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext3">Chickpeas (Channa)</span></button>
+    <button class="g6"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext">Arrowroot (Araru/Paniphal)</span></button>
+    <button class="g7"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Quinoa (Bathua)</span></button>
+    <button class="g8"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Bulgar Wheat (Lapsi)</span></button>
+    <button class="g9"><div class="add"><img src="../images/main/tick.png" class="addimg" /></div><span class="addtext2">Oats (Jayi)</span></button>
+    <button class="g10"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext4">Rye</span></button>
+    <button class="g11"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext3">Sorghum (Jowar)</span></button>
+    <button class="g12"><div class="add"><img src="../images/main/add.png" class="addimg" /></div><span class="addtext4">Rice</span></button>
     <div class="blockie1">
       <div class="col1">Total Flour Qty.</div>
       <div class="col2">Mix Proportion</div>
       <div class="col3">Total Amt.</div>
       <div class="flouratta">
         <div class="opt">Customised Atta</div>
-        <div class="range1">02 </div>
+        <button class="range1">02 </button>
         <span class="divi1" ></span>
-        <div class="range2">05 </div><span class="kg">Kg</span>
+        <button class="range2">05 </button><span class="kg">Kg</span>
         <span class="divi2"></span>
-        <div class="range3">10 </div>
+        <button class="range3">10 </button>
         <div class="prop"> - </div>
         <div class="amt">9999</div>
       </div>
@@ -82,55 +81,55 @@
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
         <div class="prop"> 100% </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
       <hr class="sect1" />
       <div class="millet">
         <div class="opt">Millet (Bajra)</div>
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
-        <div class="range4">04 </div>
+        <button class="range4">04 </button>
         <span class="divi3" ></span>
-        <div class="range5">05 </div><span class="perc">%</span>
+        <button class="range5">05 </button><span class="perc">%</span>
         <span class="divi4"></span>
-        <div class="range6">06 </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="range6">06 </button>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
       <hr class="sect2" />
       <div class="channa">
         <div class="opt">Chickpeas (Channa)</div>
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
-        <div class="range4">04 </div>
+        <button class="range4">04 </button>
         <span class="divi3" ></span>
-        <div class="range5">05 </div><span class="perc">%</span>
+        <button class="range5">05 </button><span class="perc">%</span>
         <span class="divi4"></span>
-        <div class="range6">06 </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="range6">06 </button>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
       <hr class="sect3" />
       <div class="arroroot">
         <div class="opt">Arrowroot (Araru/Paniphal)</div>
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
-        <div class="range4">04 </div>
+        <button class="range4">04 </button>
         <span class="divi3" ></span>
-        <div class="range5">05 </div><span class="perc">%</span>
+        <button class="range5">05 </button><span class="perc">%</span>
         <span class="divi4"></span>
-        <div class="range6">06 </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="range6">06 </button>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
       <hr class="sect4" />
       <div class="oat">
         <div class="opt">Oats (Jayi)</div>
         <div class="price">30/Kg </div>
         <div class="quant">100 gm </div>
-        <div class="range4">04 </div>
+        <button class="range4">04 </button>
         <span class="divi3" ></span>
-        <div class="range5">05 </div><span class="perc">%</span>
+        <button class="range5">05 </button><span class="perc">%</span>
         <span class="divi4"></span>
-        <div class="range6">06 </div>
-        <div class="cancel"><span class="cross">x</span></div>
+        <button class="range6">06 </button>
+        <button class="cancel"><span class="cross">x</span></button>
       </div>
     </div>
 
