--- a/auth/otp-confirm.html
+++ b/auth/otp-confirm.html
@@ -21,7 +21,7 @@
       <div class="enter3"><input type="number" id="nummy"/></div>
       <div class="enter4"><input type="number" id="nummy"/></div>
     </form>
-    <div class="but3"></div><span class="cont"><a href="../delivery/delivery.html" id="a1">Verify</a></span>
+    <button class="but3"></button><span class="cont"><a href="../delivery/delivery.html" id="a1">Verify</a></span>
     <div class="text"> Don't get it? </div> <span class="login1">Resend Code.</span></span><span class="time">0:30</span>
   </div>
 </body>
