--- a/auth/otp.html
+++ b/auth/otp.html
@@ -15,7 +15,7 @@
       <div class="nicon">+91</div>
       <input type="text" class="ntext" placeholder="Enter your phone number"></input>
     </div>
-    <div class="but1"></div><span class="otp"><a href="./otp-confirm.html" id="a1">Send OTP</a></span>
+    <button class="but1"></button><span class="otp"><a href="./otp-confirm.html" id="a1">Send OTP</a></span>
     <div class="blockimg"></div>
     <div class="arrow"><a href="./signup.html"><img src="../images/auth/arrow.png"/></a></div>
   <div class="numbs">
