--- a/auth/signup.html
+++ b/auth/signup.html
@@ -16,7 +16,7 @@
       <input type="text" class="ntext" placeholder="Enter your phone number"></input>
     </div>
     <div class="blockimg">  </div>
-    <div class="but1"></div><span class="otp"><a href="otp.html" id="a1">Send OTP</a></span>
+    <button class="but1"></button><span class="otp"><a href="otp.html" id="a1">Send OTP</a></span>
     <span class="term">By signing in, you agree to our <br />
     <b><a href="terms.html" id="a3">Terms of Service</a>, <a href="privacy.html" id="a3">Privacy Policy</a>,<a href="content.html" id="a3">Content Policy</a></b></span>
   </div>
