--- a/main/cart.html
+++ b/main/cart.html
@@ -27,9 +27,9 @@
         <span class="gtype">Grinding Type: Medium</span><span class="info">Nutritional Info </span><img src="../images/main/info.png" class="i" />
         <span class="edit">Edit</span><img src="../images/auth/arrow.png" class="earrow"/>
         <div class="count">
-          <div class="minus"><img src="../images/main/minus.png" /></div>
+          <button class="minus"><img src="../images/main/minus.png" /></button>
           <div class="numbback"><span class="numb">1</span></div>
-          <div class="plus"><img src="../images/main/plus.png" /></div>
+          <button class="plus"><img src="../images/main/plus.png" /></button>
         </div>
       </div>
       <div class="block2">
@@ -47,9 +47,9 @@
         <span class="gtype">Grinding Type: Medium</span><span class="info">Nutritional Info </span><img src="../images/main/info.png" class="i" />
         <span class="edit">Edit</span><img src="../images/auth/arrow.png" class="earrow"/>
         <div class="count">
-          <div class="minus"><img src="../images/main/minus.png" /></div>
+          <button class="minus"><img src="../images/main/minus.png" /></button>
           <div class="numbback"><span class="numb">1</span></div>
-          <div class="plus"><img src="../images/main/plus.png" /></div>
+          <button class="plus"><img src="../images/main/plus.png" /></button>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
 
       <div class="checkout">
         <span class="items">2 items</span>
-        <div class="cbut"><span class="ctext"><a href="./custcart.html" id="a1">Checkout</a></span><img src="../images/home/more.png" class="carr" /></div>
+        <button class="cbut"><span class="ctext"><a href="./custcart.html" id="a1">Checkout</a></span><img src="../images/home/more.png" class="carr" /></button>
       </div>
   </div>
 </body>
