--- a/main.html
+++ b/main.html
@@ -6,13 +6,8 @@
 <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
-  <div class="main">
-    <a href="./walkthrough/page1.html"><div class="page">
-    <div class="back">
-    </div>
-    <div class="logo">
-    </div>
-  </div></a>
-  </div>
+    <a href="./walkthrough/page1.html">
+    <video width="360px" height="640px" autoplay><source src="./images/main.mp4" type="video/mp4"></video>
+    </a>
 </body>
 </html>
